src/snapshots/min_2__tests__sourcemap__enums.snap
---
source: src/tests.rs
expression: "&r.sourcemap"
---
import util, { pipe } from '@std/util';
import math from '@std/math';

export abstract class Enum {



protected fnForAll(this: A | B, a) { return math['+'](this,a);}



};

export class A extends Enum {
public readonly test = `fsldkjf`;
};

export class B extends Enum {
private readonly val = false;
};


AAAA,AACO,OACH,IAAW,IAAE,YAAb
AAAA,OACA,UAAA
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA,AAQE,UAGN,QAAS,cAAA,YAAI,AAAK,AAAC,UAAL,KAAO
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA,AAXL,aAEZ
AAAA,AAAE,gBACM,OAAM,AAAC
AAAA
AAAA
AAAA,AACb,aAEF
AAAA,AAAE,iBACE,MAAK,AAAC
AAAA
