src/snapshots/min_2__tests__sourcemap__matcher.snap
---
source: src/tests.rs
expression: "&r.sourcemap"
---
import util, { pipe } from '@std/util';
import math from '@std/math';





 const self = {}




function matchSimple(v) { return util['match'](v,(_) => { if (_ ==1){ return 1} else if (_ ==`a string`){ return _} else if (_ ==-2){ return 2}});}

function matchExample(v) { return pipe(v).op(util['match'], (_) => { if (_ ==1){ return 1} else if (_ ==`a string`){ return _} else if (_ ==-2){ return 2}}).op(math['+'], 2).end();}export default { ...self, }


AAAA,AACO,OACH,IAAW,IAAE,YAAb
AAAA,OACA,UAAA
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA
AAAA,AAAY,SAIhB,WAAY,CAAA,YAAI,AACX,cAAD,EAAO,YAAE,GAAA,EACH,AAAC,WAAI,AAAC,cAAE,EACP,oBAAa,AAAC,cAAE,EACjB,CAAE,WAAI,AAAC
AAAA
AAAA,AACX,SAEN,YAAa,CAAA,YAAI,KACb,MAAC,eAAM,YAAE,GAAA,EACH,AAAC,WAAI,AAAC,cAAE,EACP,oBAAa,AAAC,cAAE,EACjB,CAAE,WAAI,AAAC,IACZ,IAAA,AACD,WAAC,AAAC
